--- a/parte 5/1. update users.md
+++ b/parte 5/1. update users.md
@@ -1,39 +1,40 @@
-# Update Users js
+# Update Users
 
-Let's complete our /users routes with PATCH and DELETE requests.
-Again, we need a specific user for those actions, so we need to use "userID" in routes. This will help to modify the user by its unique ID. 
+Let's complete our **/users** routes with **PATCH** and **DELETE** requests.
+Again, we need a specific user for those actions, so we need to use "userID" in routes. This will help to modify the user by its unique ID.
 
-So, the PATCH method will be:
+So, the **PATCH** method will be:
 
 ```js
 // users.js
 router.patch('/:userID', (req, res, next) => {
-  const id = req.params.userID;
+  const id = req.params.userID
   // find and update user by id
   res.status(200).json({
     message: 'User updated!'
-  });
-});
+  })
+})
 ```
 
+The **PATCH** request method applies **partial modifications** to a resource. The HTTP PUT method only allows complete replacement of a document. **PATCH** is not idempotent, meaning successive identical patch requests may have different effects.
 
-The PATCH request method applies partial modifications to a resource. The HTTP PUT method only allows complete replacement of a document. PATCH is not idempotent, meaning successive identical patch requests may have different effects. 
+And the **DELETE** method:
 
-And the DELETE method:
 ```js
 // users.js
 router.delete('/:userID', (req, res, next) => {
-  const id = req.params.userID;
+  const id = req.params.userID
   // find and delete user by id
   res.status(200).json({
     message: 'User Deleted!'
-  });
-});
+  })
+})
 ```
 
 Let's start/restart the server and quickly test the new methods with Postman:
-PATCH Request: localhost:3000/users/admin
 
-DELETE Request: localhost:3000/users/1234
+**PATCH Request: localhost:3000/users/admin**
+
+**DELETE Request: localhost:3000/users/1234**
 
 > It is a good practice to test each new route just after the creation to avoid unexpected errors later.
