--- a/parte 5/3. nodemon.md
+++ b/parte 5/3. nodemon.md
@@ -1,12 +1,13 @@
-nodemon js
+# nodemon
 
-Now we have the primary routing, and we can test each route with Postman. However, after each change, we need to restart the server where we usually forget.
+Now we have the primary routing, and we can test each route with Postman. However, after each change, we need to **restart** the server where we usually forget.
 
-There is an npm package named "nodemon" which restarts the server whenever we make some changes. Let's install this package and set it up properly, so we don't need to restart the server manually after each change.
+There is an npm package named "**nodemon**" which restarts the server whenever we make some changes. Let's install this package and set it up properly, so we don't need to restart the server manually after each change.
 To install the package, use the following command: 
-$ npm install **--save-dev** nodemon
 
-> Note that we used **--save-dev** for the option. The **--save** part means that it will add this package inside the package.json file's dependencies and the -dev part indicates that it will add it inside devDependencies, because we don't need such a tool when we publish or host our server.
+  $ npm install --save-dev nodemon
+
+> Note that we used **--save-dev** for the option. The **--save** part means that it will add this package inside the package.json file's dependencies and the **-dev** part indicates that it will add it inside **devDependencies**, because we don't need such a tool when we publish or host our server.
 
 
 After installation, you can check the package.json file for the following lines (the version may vary): 
