--- a/parte 5/5. code route.md
+++ b/parte 5/5. code route.md
@@ -7,7 +7,6 @@ For now, we have completed our dummy users route, let's build the codes route fr
 
 If you don't have the /api/routes/codes.js file in your project, then create it and follow the instructions below.
 
-Here is the full code of the codes.js file (Tap Try it Yourself to see the full version): 
 ```js
 // codes.js
 const express = require('express');
@@ -22,7 +21,7 @@ router.delete('/:codeID', (req, res, next) => {});
 module.exports = router;
 ```
 
-And here are the changes in the app.js file: 
+And here are the changes in the **app.js** file: 
 ```js
 // app.js
 ...
