--- a/parte 5/7. body parser in use.md
+++ b/parte 5/7. body parser in use.md
@@ -1,4 +1,4 @@
-Body Parser in Use js
+# Body Parser in Use
 
 In the previous lesson, we added the body-parser to extract the data from the incoming request bodies. In this lesson, we will implement it in our /users and /codes routes to get the desired data.
 
@@ -18,7 +18,7 @@ Here the sampleData is just a random word. But it should match the property on t
 
 Now let's handle the request body in /users route's POST handler: 
 
-
+```js
 // users.js
 router.post('/', (req, res, next) => {
   const user = {
@@ -30,6 +30,7 @@ router.post('/', (req, res, next) => {
     user: user
   });
 });
+```
 
 
 Now let's write the body and see the response:
@@ -39,6 +40,7 @@ Now let's write the body and see the response:
 
 
 Let's do the same for /codes: 
+```js
 
 // codes.js
 router.post('/', (req, res, next) => {
@@ -51,6 +53,7 @@ router.post('/', (req, res, next) => {
     code: code
   });
 });
+```
 
 The Postman request will look like this:
 
