--- a/parte 5/2. status codes.md
+++ b/parte 5/2. status codes.md
@@ -1,8 +1,8 @@
-# Status Codes js
+# Status Codes
 
 So far, we've built the base of our routes; however, it is not a good practice to use only the status code 200 (OK) for all the responses.
 
-In general, HTTP status codes are divided into five categories, but now we only need one: 2XX codes.
+In general, [HTTP status codes](https://restfulapi.net/http-status-codes/) are divided into five categories, but now we only need one: 2XX codes.
 
 For now, there is only one status code that we need to change: the one for our POST route. The HTTP status code 201 is used whenever a resource is created inside a collection. So, let's go back to the users.js file and edit the status code: 
 
@@ -15,11 +15,11 @@ router.post('/', (req, res, next) => {
 });
 ```
  
-Note that the status is 201 at the image above.
+Note that the status is **201** at the image above.
 
 
 Let's send a POST request using Postman and see the result.
-POST Request: localhost:3000/users
+**POST Request: localhost:3000/users**
 
 ![](./post.png)
 
