--- a/parte 5/4. error handling.md
+++ b/parte 5/4. error handling.md
@@ -2,35 +2,34 @@
 
 It’s always possible for a request to be wrong, either because of human error or code bugs. Therefore, we need to improve our API and include a central error handler that will catch the main errors and won't let the server crash.
 
-Remember that in app.js, we had a middleware to handle all the incoming requests to the /users route. Our error handling middleware will catch anything that isn't captured by that middleware or any other one (we will add this later).
+Remember that in app.js, we had a middleware to handle all the incoming requests to the **/users** route. Our error handling middleware will catch anything that isn't captured by that middleware or any other one (we will add this later).
 
-First, let's handle the Not Found error. For this, we need to use the app object again and, just like any other route, get the req, res and next parameters and return a callback. This code snippet needs to be at the end of your app.js file, just before the export.
+First, let's handle the **Not Found** error. For this, we need to use the app object again and, just like any other route, get the **req, res** and **next** parameters and return a callback. This code snippet needs to be at the end of your app.js file, just before the export.
 
 ```js
 // app.js
 app.use((req, res, next) => {
-  const error = new Error('Not found');
-  error.status = 404;
-  next(error);
-});
+  const error = new Error('Not found')
+  error.status = 404
+  next(error)
+})
 ```
 
-So, in the code above, we get the request and throw an error object, attach the status code 404 (which stands for Not Found), and finally pass the error object into the next().
+So, in the code above, we get the request and throw an error object, attach the status code **404** (which stands for **Not Found**), and finally pass the error object into the **next()**.
 
-But, so far, we don't have anything that will catch the next(). So, let's create a general error handler which will get the next() call and handle it properly.
+But, so far, we don't have anything that will catch the **next()**. So, let's create a general error handler which will get the **next()** call and handle it properly.
 
-Error handlers need one more extra parameter: error. 
+Error handlers need one more extra parameter: error.
 
 ```js
 // app.js
 app.use((error, req, res, next) => {
-  res.status(error.status || 500);
+  res.status(error.status || 500)
   res.json({
     error
-  });
-});
+  })
+})
 ```
-
 
 Here we check if there is a custom status on the error, and if not, by default, it will return the status 500. The rest is similar to what we did in previous lessons, creating a custom JSON object for the response.
 
@@ -46,11 +45,11 @@ res.json({
 });
 ```
 
-
 So let's send a bad request which is not handled and see the result:
-GET Request: localhost:3000/
- 
+
+**GET Request: localhost:3000/**
+
 Try to change the JSON body to read the error.message as shown above and send the same request again to see the difference.
 
-> It is essential to distinguish between the Request handlers and Error handlers. They are implemented differently and work differently in the Express framework.
-Request handlers will get at most 3 parameters (such as req, res, and next), but Error handlers need 4 parameters (such as error, req, res, and next).
+> It is essential to distinguish between the **Request handlers** and **Error handlers**. They are implemented differently and work differently in the Express framework.
+> **Request handlers** will get at most 3 parameters (such as req, res, and next), but **Error handlers** need 4 parameters (such as **error, req, res,** and **next**).
