crear archivos restantes en ingles

--- a/parte 6/ingles/2.md
+++ b/parte 6/ingles/2.md
@@ -1,6 +1,6 @@
 ## What is MongoDB
 
-MongoDB is a free and open-source cross-platform document-oriented database. Classified as a NoSQL database, it uses JSON-like documents with schemas.
+MongoDB is a free and open-source cross-platform document-oriented database. Classified as a **NoSQL** database, it uses JSON-like documents with schemas.
 
 
 ![](https://www.master-bigdata.com/wp-content/uploads/2016/02/mongo-db-logo-e1456909721366-653x270.jpg)
@@ -8,6 +8,7 @@ MongoDB is a free and open-source cross-platform document-oriented database. Cla
  
 It has some major differences from **SQL databases** like MySQL and SQLite. In cases where we have few or no relations and mostly reads rather than writes, it is recommended to use NoSQL databases because they are easier to deal with, have no strict schemas, and allow different documents in the same collection. NoSQL databases are usually easier to scale horizontally, which is easier and safer than ones scaled vertically.
 
+>You can learn the basic terminology of MongoDB [here]().
 
 MongoDB has some drawbacks. It is not always the best solution, and big platforms and services usually use both NoSQL and SQL databases in different parts of their platforms.
 
