--- a/parte 6/ingles/3.md
+++ b/parte 6/ingles/3.md
@@ -1,6 +1,6 @@
 ## Install and Setup MongoDB
 
-In this lesson, we are going to setup MongoDB on our system. You can find the official installation guide here.
+In this lesson, we are going to setup MongoDB on our system. You can find the official installation guide [here](https://docs.mongodb.com/manual/installation/).
 
 After the installation, you can use the following command to start the **mongod** server: 
 
@@ -16,7 +16,7 @@ And finally to restart the server:
     $ sudo service mongod restart 
 
 
-To start a mongo shell on the same host machine as the mongod, use the **--host** command line option to specify the localhost address and port that the mongod listens on. For example: 
+To start a [mongo shell]() on the same host machine as the mongod, use the **--host** command line option to specify the localhost address and port that the mongod listens on. For example: 
 
     $ mongo --host 127.0.0.1:27017 
 
