--- a/docs/express/en/9. status codes.md
+++ b/docs/express/en/9. status codes.md
@@ -21,6 +21,6 @@ Note that the status is **201** at the image above.
 Let's send a POST request using Postman and see the result.
 **POST Request: localhost:3000/users**
 
-![](./post.png)
+<!-- ![](./post.png) -->
 
 > From now on, we will only use the correct status codes for each response, where the most common ones are 200, 201, 404 and 500.
